--- a/public/stylesheets/board.styl
+++ b/public/stylesheets/board.styl
@@ -38,7 +38,6 @@ main
     
 #board
   position: relative
-  overflow: hidden
   height: 100%
   .board-canvas
     flex-grow: 1
@@ -47,7 +46,3 @@ main
     overflow-x: auto
     white-space: nowrap
     position: absolute
-    bottom: 0
-    top: 0
-    right: 0
-    left: 0
